fixtures/cs-jwt-01/bad/require-destructured-decode-only.js
const { decode } = require("jsonwebtoken");

function readToken(token) {
	return decode(token);
}

module.exports = { readToken };
